<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.camera.CameraFragment"
    android:id="@+id/fragment_camera_id">

    <com.journeyapps.barcodescanner.CompoundBarcodeView
        android:id="@+id/barcode_scanner"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-75dp"
        tools:layout_editor_absoluteY="0dp">

        <Button
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:id="@+id/flash_button"
            android:drawableLeft="@drawable/ic_baseline_flash_on_24"
            android:layout_marginStart="30dp"
            android:layout_marginTop="80dp"
            android:background="@color/zxing_transparent"
            android:onClick="flashButtonOnClick">
        </Button>
    </com.journeyapps.barcodescanner.CompoundBarcodeView>

</androidx.constraintlayout.widget.ConstraintLayout>