<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_camera"
        android:icon="@drawable/ic_outline_crop_free_24"
        android:title="@string/title_camera" />

    <item
        android:id="@+id/navigation_data"
        android:icon="@drawable/ic_baseline_description_24"
        android:title="@string/title_data"/>

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/title_search"/>

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/title_settings"/>
</menu>