...
    <string name="scan_info">scanning for QR-code...</string>
    <string name="scanned">scanned </string>

    <string name="placeholder_fragment_settings_user">Username</string>
    <string name="placeholder_fragment_settings_password">Password</string>
    <string name="text_fragment_settings_submit">Login</string>
    <string name="text_fragment_settings_logout">Logout</string>
    <string name="invalid_credentials">Invalid user or password</string>
    <string name="ok">OK</string>

    <string name="error_default_msg">an error occurred</string>
    <string name="error_invalid_url">this qr code is not supported</string>
    <string name="error_no_connection">no connection to server</string>
...
